# whoop_logger

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: config.py
postgres-docker/: docker-compose.yaml
sql/: asd.sql  event.sql  event_type.sql
whoop_logger/: whoop_logger.py
